--- a/Matematica Computacional/AVP2/Projeto/index.html
+++ b/Matematica Computacional/AVP2/Projeto/index.html
@@ -21,28 +21,28 @@
       </div>
       <div class="col-12">
         <!--Sistema Linear-->
-        <form action="#" class="formSistemaLinear" method="POST" enctype="multipart/form-data">
+        <form action="#" class="formSistemaLinear" id="formSistemaLinear" method="POST" enctype="multipart/form-data">
           <h2 class="text-center">Calcular sistema linear pelo metodo Gauss-jordan</h2>
           <div class="row">
-            <div class="col">
+            <div class="col-12 col-lg-4 mb-2">
               <fieldset>
                 <legend class="table-dark px-3">Informe a primeira Equação</legend>
               </fieldset>
               <div class="d-flex">
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="0" data-column="0" name="s-0-0">
+                  <input type="text" class="form-control" data-row="0" data-column="0" name="s-0-0" required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">x</div>
                   </div>
                 </div>
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="0" data-column="1" name="s-0-1">
+                  <input type="text" class="form-control" data-row="0" data-column="1" name="s-0-1" required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Y</div>
                   </div>
                 </div>
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="0" data-column="2" name="s-0-2">
+                  <input type="text" class="form-control" data-row="0" data-column="2" name="s-0-2" required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Z</div>
                   </div>
@@ -51,29 +51,29 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">=</div>
                   </div>
-                  <input type="text" class="form-control" data-row="0" data-column="3" name="s-0-3">
+                  <input type="text" class="form-control" data-row="0" data-column="3" name="s-0-3"  required="required">
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-lg-4 mb-2">
               <fieldset>
                 <legend class="table-dark px-3">Informe a primeira Equação</legend>
               </fieldset>
               <div class="d-flex">
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="1" data-column="0" name="s-1-0">
+                  <input type="text" class="form-control" data-row="1" data-column="0" name="s-1-0"  required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">x</div>
                   </div>
                 </div>
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="1" data-column="1" name="s-1-1">
+                  <input type="text" class="form-control" data-row="1" data-column="1" name="s-1-1"  required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Y</div>
                   </div>
                 </div>
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="1" data-column="2" name="s-1-2">
+                  <input type="text" class="form-control" data-row="1" data-column="2" name="s-1-2"  required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Z</div>
                   </div>
@@ -82,30 +82,30 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">=</div>
                   </div>
-                  <input type="text" class="form-control" data-row="1" data-column="3" name="s-1-3">
+                  <input type="text" class="form-control" data-row="1" data-column="3" name="s-1-3"  required="required">
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-12 col-lg-4 mb-2">
               <fieldset>
                 <legend class="table-dark px-3">Informe a primeira Equação</legend>
               </fieldset>
               <div class="d-flex">
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="2" data-column="0" name="s-2-0">
+                  <input type="text" class="form-control" data-row="2" data-column="0" name="s-2-0"  required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">x</div>
                   </div>
                 </div>
 
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="2" data-column="1" name="s-2-1">
+                  <input type="text" class="form-control" data-row="2" data-column="1" name="s-2-1"  required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Y</div>
                   </div>
                 </div>
                 <div class="input-group">
-                  <input type="text" class="form-control" data-row="2" data-column="2" name="s-2-2">
+                  <input type="text" class="form-control" data-row="2" data-column="2" name="s-2-2"  required="required">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Z</div>
                   </div>
@@ -114,7 +114,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">=</div>
                   </div>
-                  <input type="text" class="form-control" data-row="2" data-column="3" name="s-2-3">
+                  <input type="text" class="form-control" data-row="2" data-column="3" name="s-2-3" required="required">
                 </div>
               </div>
             </div>
@@ -125,35 +125,35 @@
         </form>
         <hr />
         <!--MAtrizes-->
-        <form action="#" class="formMatriz" method="POST" enctype="multipart/form-data">
+        <form action="#" class="formMatriz" id="formMatriz" method="POST" enctype="multipart/form-data">
           <h2 class="text-center">Calcular Matrizes</h2>
           <div class="row align-items-center">
-            <div class="col-5 text-center">
+            <div class="col-12 col-lg-5 text-center">
               <fieldset>
                 <legend class="table-dark">Matriz A</legend>
                 <table class="table" id="matrizA">
                   <tr class="el-0">
-                    <td><input type="number" class="form-control" name="a-0-0" data-row="0" data-column="0" required>
+                    <td><input type="number" class="form-control" name="a-0-0" data-row="0" data-column="0">
                     </td>
-                    <td><input type="number" class="form-control" name="a-0-1" data-row="0" data-column="1" required>
+                    <td><input type="number" class="form-control" name="a-0-1" data-row="0" data-column="1">
                     </td>
-                    <td><input type="number" class="form-control" name="a-0-2" data-row="0" data-column="2" required>
+                    <td><input type="number" class="form-control" name="a-0-2" data-row="0" data-column="2">
                     </td>
                   </tr>
                   <tr class="el-1">
-                    <td><input type="number" class="form-control" name="a-1-0" data-row="1" data-column="0" required>
+                    <td><input type="number" class="form-control" name="a-1-0" data-row="1" data-column="0">
                     </td>
-                    <td><input type="number" class="form-control" name="a-1-1" data-row="1" data-column="1" required>
+                    <td><input type="number" class="form-control" name="a-1-1" data-row="1" data-column="1">
                     </td>
-                    <td><input type="number" class="form-control" name="a-1-2" data-row="1" data-column="2" required>
+                    <td><input type="number" class="form-control" name="a-1-2" data-row="1" data-column="2">
                     </td>
                   </tr>
                   <tr class="el-2">
-                    <td><input type="number" class="form-control" name="a-2-0" data-row="2" data-column="0" required>
+                    <td><input type="number" class="form-control" name="a-2-0" data-row="2" data-column="0">
                     </td>
-                    <td><input type="number" class="form-control" name="a-2-1" data-row="2" data-column="1" required>
+                    <td><input type="number" class="form-control" name="a-2-1" data-row="2" data-column="1">
                     </td>
-                    <td><input type="number" class="form-control" name="a-2-2" data-row="2" data-column="2" required>
+                    <td><input type="number" class="form-control" name="a-2-2" data-row="2" data-column="2">
                     </td>
                   </tr>
                 </table>
@@ -168,34 +168,34 @@
             <div class="col-2 text-center">
               <button type="submit" data-action="multiplicar" class="btn btn-success mb-2">A x B</button>
               <button type="submit" data-action="somar" class="btn btn-success mb-2">A + B</button>
-              <button type="reset" class="btn btn-danger">Limpar</button>
+              <!--<button type="reset" class="btn btn-danger">Limpar</button>-->
             </div>
-            <div class="col-5 text-center">
+            <div class="col-12 col-lg-5 text-center">
               <fieldset>
                 <legend class="table-dark">Matriz B</legend>
                 <table class="table" id="matrizB">
                   <tr>
-                    <td><input type="number" class="form-control" name="b-0-0" data-row="0" data-column="0" required>
+                    <td><input type="number" class="form-control" name="b-0-0" data-row="0" data-column="0">
                     </td>
-                    <td><input type="number" class="form-control" name="b-0-1" data-row="0" data-column="1" required>
+                    <td><input type="number" class="form-control" name="b-0-1" data-row="0" data-column="1">
                     </td>
-                    <td><input type="number" class="form-control" name="b-0-2" data-row="0" data-column="2" required>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><input type="number" class="form-control" name="b-1-0" data-row="1" data-column="0" required>
-                    </td>
-                    <td><input type="number" class="form-control" name="b-1-1" data-row="1" data-column="1" required>
-                    </td>
-                    <td><input type="number" class="form-control" name="b-1-2" data-row="1" data-column="2" required>
+                    <td><input type="number" class="form-control" name="b-0-2" data-row="0" data-column="2">
                     </td>
                   </tr>
                   <tr>
-                    <td><input type="number" class="form-control" name="b-2-0" data-row="2" data-column="0" required>
+                    <td><input type="number" class="form-control" name="b-1-0" data-row="1" data-column="0">
                     </td>
-                    <td><input type="number" class="form-control" name="b-2-1" data-row="2" data-column="1" required>
+                    <td><input type="number" class="form-control" name="b-1-1" data-row="1" data-column="1">
                     </td>
-                    <td><input type="number" class="form-control" name="b-2-2" data-row="2" data-column="2" required>
+                    <td><input type="number" class="form-control" name="b-1-2" data-row="1" data-column="2">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><input type="number" class="form-control" name="b-2-0" data-row="2" data-column="0">
+                    </td>
+                    <td><input type="number" class="form-control" name="b-2-1" data-row="2" data-column="1">
+                    </td>
+                    <td><input type="number" class="form-control" name="b-2-2" data-row="2" data-column="2">
                     </td>
                   </tr>
                 </table>
