--- a/Matematica Computacional/AVP2/Projeto/index.html
+++ b/Matematica Computacional/AVP2/Projeto/index.html
@@ -168,7 +168,7 @@
             <div class="col-2 text-center">
               <button type="submit" data-action="multiplicar" class="btn btn-success mb-2">A x B</button>
               <button type="submit" data-action="somar" class="btn btn-success mb-2">A + B</button>
-              <!--<button type="reset" class="btn btn-danger">Limpar</button>-->
+              <button type="reset" class="btn btn-danger">Limpar</button>
             </div>
             <div class="col-12 col-lg-5 text-center">
               <fieldset>
